:recycle: :: Add checkAuthorization And Refactor